JumpScript/tests/baselines/reference/scannerNumericLiteral9.errors.txt
tests/cases/conformance/scanner/ecmascript5/scannerNumericLiteral9.jump(1,3): error TS1005: ';' expected.


==== tests/cases/conformance/scanner/ecmascript5/scannerNumericLiteral9.jump (1 errors) ====
    009
      ~
!!! error TS1005: ';' expected.